--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ pandas
 scikit-learn
 jupyterlab
 jupyterlab-vim
+--extra-index-url https://download.pytorch.org/whl/cpu
 torch
 torchvision
 torchaudio
