--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ pandas
 scikit-learn
 jupyterlab
 jupyterlab-vim
+tqdm
+pymc
+pyro-ppl
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch
 torchvision
